cmake_minimum_required(VERSION 2.8.11)
project(Ocean)
set(CMAKE_CXX_FLAGS "-g -Wall -Wextra")

add_subdirectory(src)
#add_subdirectory(test)
add_executable(Dvector src/mainDvector.cpp)
add_executable(Height src/mainHeight.cpp)
add_executable(Ocean src/mainOcean.cpp)
target_link_libraries(Dvector PUBLIC lib)
target_include_directories(Dvector PUBLIC lib)
target_link_libraries(Height PUBLIC lib)
target_include_directories(Height PUBLIC lib)
target_link_libraries(Ocean PUBLIC lib)
target_include_directories(Ocean PUBLIC lib)
